<resources>
    <string name="app_name">Tubes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ShowRoom</string>
    <string name="nav_header_subtitle">Praktikum Pemrograman Mobile</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_refresh">Refresh</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_mobil">Mobil</string>
    <string name="menu_motor">Motor</string>
    <string name="menu_promo">Promo</string>
    <string name="menu_anggota">Anggota</string>
</resources>