<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_mobil"
            android:icon="@drawable/baseline_directions_car_24"
            android:title="@string/menu_mobil" />

        <item
            android:id="@+id/nav_motor"
            android:icon="@drawable/baseline_pedal_bike_24"
            android:title="@string/menu_motor" />

        <item
            android:id="@+id/nav_promo"
            android:icon="@drawable/baseline_discount_24"
            android:title="@string/menu_promo" />

        <item
            android:id="@+id/nav_anggota"
            android:icon="@drawable/baseline_people_alt_24"
            android:title="@string/menu_anggota" />
    </group>
</menu>