<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.unpas.showroom.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_mobil"
        android:name="com.unpas.showroom.ui.mobil.MobilFragment"
        android:label="@string/menu_mobil"
        tools:layout="@layout/fragment_mobil" />

    <fragment
        android:id="@+id/nav_motor"
        android:name="com.unpas.showroom.ui.motor.MotorFragment"
        android:label="@string/menu_motor"
        tools:layout="@layout/fragment_motor" />

    <fragment
        android:id="@+id/nav_promo"
        android:name="com.unpas.showroom.ui.promo.PromoFragment"
        android:label="@string/menu_promo"
        tools:layout="@layout/fragment_promo" />

    <fragment
        android:id="@+id/nav_anggota"
        android:name="com.unpas.showroom.ui.anggota.AnggotaFragment"
        android:label="@string/menu_anggota"
        tools:layout="@layout/fragment_anggota" />
</navigation>